--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,26 @@ target/
 *.log
 *.tmp
 *.class
-.vscode/
 api_key.txt
+
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
