--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: CI/CD Pipeline
 
 on:
   push:
@@ -10,22 +10,55 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
-        java-version: '17'
         distribution: 'temurin'
-        cache: maven
+        java-version: '17'
 
-    - name: Compile the project
-      run: mvn clean compile
+    - name: Create API key file
+      run: echo ${{ secrets.API_KEY }} > api_key.txt
 
-    - name: Run tests
-      run: mvn test -Dtest='!CurrencyConverterAppTest'
+    - name: Install dependencies, build, and test backend
+      run: |
+        mvn clean verify
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    - name: Install frontend dependencies, test, and build
+      working-directory: ./frontend
+      run: |
+        npm install
+        npm test -- --watchAll=false
+        npm run build
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build backend Docker image
+      run: |
+        docker build -f Dockerfiles/backend.dockerfile -t ${{ secrets.DOCKER_USERNAME }}/java-currency-backend:latest .
+
+    - name: Build frontend Docker image
+      run: |
+        docker build -f Dockerfiles/frontend.dockerfile -t ${{ secrets.DOCKER_USERNAME }}/currency-frontend:latest .
+
+    - name: Push backend Docker image to Docker Hub
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/java-currency-backend:latest
+
+    - name: Push frontend Docker image to Docker Hub
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/currency-frontend:latest
