--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,13 @@
     "test:ci": "vitest run"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
