--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6"
   },
@@ -30,6 +32,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-toastify": "^4.0.2",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
