--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_DB: currencydb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./src/main/java/com/vladcranga/currencyconverter/database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+
   backend:
     build:
       context: .
@@ -9,7 +20,7 @@ services:
       - "8080:8080"
     environment:
       - API_KEY_FILE=/app/api_key.txt
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/currencydb
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/currencydb
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
     volumes:
@@ -17,8 +28,7 @@ services:
       - ./currency_codes.txt:/app/currency_codes.txt
     depends_on:
       - frontend
-    extra_hosts:
-      - "host.docker.internal:host-gateway"  # Allows connection to host PostgreSQL
+      - db
 
   frontend:
     build:
